[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snippet-cli"
version = "2.3.2"
description = "An advanced snippet manager for the command-line."
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "bytebutcher", email = "thomas.engel.web@gmail.com" }]
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyparsing>=3.3.2,<4",
    "argcomplete>=3.6.3,<4",
    "iterfzf==1.9.0.67.0",
    "colorama==0.4.6",
]

[project.optional-dependencies]
test = ["parameterized"]

[project.scripts]
snippet = "snippet:main"

[project.urls]
Homepage = "https://github.com/bytebutcher/snippet"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snippet = [".snippet/*.py", ".snippet/codecs/*.py"]